--- a/routes/index.html
+++ b/routes/index.html
@@ -1,62 +1,111 @@
 <:Head>
-	<title>Sapper project template</title>
+  <title>Sapper project template</title>
 </:Head>
 
 <Layout page='home'>
-	<h1>Great success!</h1>
-	<video ref:video id="video" width="640" height="480" autoplay></video>
-	<p><strong>Try editing this file (routes/index.html) to test hot module reloading.</strong></p>
+  <h1>Great success!</h1>
+  <video ref:video playsinline width="640" height="480" autoplay></video>
+  <canvas ref:canvas width="640" height="480"></canvas>
+  <p><strong>Try editing this file (routes/index.html) to test hot module reloading.</strong></p>
+  <p>Constraints: {{JSON.stringify(constraints)}}</p>
+  <p>label: {{JSON.stringify(label)}}</p>
+  <p>stream: {{JSON.stringify(stream)}}</p>
+  <p>Error: {{JSON.stringify(error)}}</p>
 </Layout>
 
 <style>
-	h1, p {
-		text-align: center;
-		margin: 0 auto;
-	}
+  h1, p {
+    text-align: center;
+    margin: 0 auto;
+  }
 
-	h1 {
-		font-size: 2.8em;
-		text-transform: uppercase;
-		font-weight: 700;
-		margin: 0 0 0.5em 0;
-	}
+  h1 {
+    font-size: 2.8em;
+    text-transform: uppercase;
+    font-weight: 700;
+    margin: 0 0 0.5em 0;
+  }
 
-	p {
-		margin: 1em auto;
-	}
+  p {
+    margin: 1em auto;
+  }
 
-	@media (min-width: 480px) {
-		h1 {
-			font-size: 4em;
-		}
-	}
+  @media (min-width: 480px) {
+    h1 {
+      font-size: 4em;
+    }
+  }
 </style>
 
 <script>
 
-	// ES6 import
-	import jsQR from "jsqr";
+  // ES6 import
+  import jsQR from "jsqr";
  
-	import Layout from './_components/Layout.html';
+  import Layout from './_components/Layout.html';
+  function takeSnapshot(canvas, video, image){
 
-	export default {
-		oncreate () {
+      var hidden_canvas = document.querySelector('canvas'),
+          video = document.querySelector('video.camera_stream'),
+          image = document.querySelector('img.photo'),
 
-			// Get access to the camera!
-			if(navigator.mediaDevices && navigator.mediaDevices.getUserMedia) {
-			    // Not adding `{ audio: true }` since we only want video now
-			    navigator.mediaDevices.getUserMedia({ video: true })
-			    	.then(stream => {
-			        this.refs.video.src = window.URL.createObjectURL(stream);
-			        console.log("Playing", video.src)
-			        this.refs.video.play();
-			    })
-			} else {
-				console.error("No webcam??")
-			}
-		},
-		components: {
-			Layout
-		}
-	};
+          // Get the exact size of the video element.
+          width = video.videoWidth,
+          height = video.videoHeight,
+
+          // Context object for working with the canvas.
+          context = hidden_canvas.getContext('2d');
+
+      // Set the canvas to the same dimensions as the video.
+      hidden_canvas.width = width;
+      hidden_canvas.height = height;
+
+      // Draw a copy of the current frame from the video on the canvas.
+      context.drawImage(video, 0, 0, width, height);
+
+      // Get an image dataURL from the canvas.
+      var imageDataURL = hidden_canvas.toDataURL('image/png');
+
+      // Set the dataURL as source of an image element, showing the captured photo.
+      image.setAttribute('src', imageDataURL); 
+
+  }
+
+
+
+
+  export default {
+    oncreate () {
+      // Not adding `{ audio: true }` since we only want video now
+      const constraints = {
+        audio: false,
+        video: true
+      }
+      navigator.mediaDevices.getUserMedia(constraints)
+      .then(stream => {
+        const videoTracks = stream.getVideoTracks();
+        this.set({
+          constraints,
+          stream,
+          label: videoTracks[0].label
+        })
+        stream.oninactive = function() {
+          console.log('Stream inactive');
+        };
+        window.stream = stream; // make variable available to browser console
+        // this.refs.video.srcObject = stream;
+        this.refs.video.src = window.URL.createObjectURL(stream);
+
+      })
+      .catch(error => {
+        console.error(error)
+        this.set({
+          error
+        })
+      })
+    },
+    components: {
+      Layout
+    }
+  };
 </script>
