--- a/routes/_components/Nav.html
+++ b/routes/_components/Nav.html
@@ -1,7 +1,8 @@
 <nav>
 	<ul>
 		<li><a class='{{page === "home"  ? "selected" : ""}}' href='.'>home</a></li>
-		<li><a class='{{page === "about"  ? "selected" : ""}}' href='about'>about</a></li>
+		<li><a class='{{page === "qr"  ? "selected" : ""}}' href='qr'>qr</a></li>
+		<li><a class='{{page === "flow"  ? "selected" : ""}}' href='flow'>flow</a></li>
 
 		<!-- for the blog link, we're using rel=prefetch so that Sapper prefetches
 		     the blog data when we hover over the link or tap it on a touchscreen -->
